--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -11,7 +11,7 @@
 # 'khdata' is an optional dictionary used to tell which dtb files to pull or
 # what kernel helper to run on the kernel and initramfs.
 
-# Previous to 16.04 kernels were naming using the format
+# Previous to 16.04 subarches were named using the format
 # hwe-<first letter of release>. From 16.04 onwards kernels come in the format
 # hwe-<release version>. Because the version has a '.' in it we keep the old
 # naming format for the anchors.
@@ -24,14 +24,14 @@ subarches:
  - &sa_hwe_u [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u]
  - &sa_hwe_v [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
  - &sa_hwe_w [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w]
- - &sa_hwe_x [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-16.04, hwe-16.04-lowlatency]
- - &sa_hwe_y [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-16.04, hwe-16.04-lowlatency, hwe-16.10]
+ - &sa_hwe_x [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-16.04]
+ - &sa_hwe_y [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-16.04, hwe-16.10]
  - &arm_hwe_t [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t]
  - &arm_hwe_u [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u]
  - &arm_hwe_v [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
  - &arm_hwe_w [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w]
- - &arm_hwe_x [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-16.04, hwe-16.04-lowlatency]
- - &arm_hwe_y [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-16.04, hwe-16.04-lowlatency, hwe-16.10]
+ - &arm_hwe_x [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-16.04]
+ - &arm_hwe_y [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-16.04, hwe-16.10]
 
 misc:
  - &glpae generic-lpae
@@ -46,65 +46,65 @@ releases:
    release: yakkety
    kernels:
     - [yakkety,    amd64,   hwe-16.10,             generic,     linux-generic,                        *sa_hwe_y]
+    - [yakkety,    amd64,   hwe-16.10,             lowlatency,  linux-image-lowlatency,               *sa_hwe_y]
     - [yakkety,    arm64,   hwe-16.10,             generic,     linux-generic,                        *sa_hwe_y]
     - [yakkety,    arm64,   *mustang,              generic,     linux-generic,                        [*mustang], *kh-mustang]
     - [yakkety,    arm64,   *xguboot,              generic,     linux-generic,                        [*xguboot], *kh-xgene]
     - [yakkety,    armhf,   *glpae,                *glpae,      linux-generic-lpae,                   [*glpae]]
     - [yakkety,    armhf,   hwe-16.10,             generic,     linux-generic,                        *arm_hwe_y]
     - [yakkety,    i386,    hwe-16.10,             generic,     linux-generic,                        *sa_hwe_y]
+    - [yakkety,    i386,    hwe-16.10,             lowlatency,  linux-image-lowlatency,               *sa_hwe_y]
     - [yakkety,    ppc64el, hwe-16.10,             generic,     linux-generic,                        *sa_hwe_y]
     - [yakkety,    s390x,   hwe-16.10,             generic,     linux-generic,                        *sa_hwe_y]
  - version: "16.04"
    release: xenial
    kernels:
     - [xenial,     amd64,   hwe-16.04,             generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     amd64,   hwe-16.04-lowlatency,  lowlatency,  linux-image-lowlatency-lts-xenial,    *sa_hwe_x]
+    - [xenial,     amd64,   hwe-16.04,             lowlatency,  linux-image-lowlatency-lts-xenial,    *sa_hwe_x]
     - [xenial,     arm64,   hwe-16.04,             generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     arm64,   hwe-16.04-lowlatency,  lowlatency,  linux-image-lowlatency-lts-xenial,    *sa_hwe_x]
     - [xenial,     arm64,   *mustang,              generic,     linux-generic,                        [*mustang], *kh-mustang]
     - [xenial,     arm64,   *xguboot,              generic,     linux-generic,                        [*xguboot], *kh-xgene]
     - [xenial,     armhf,   *glpae,                *glpae,      linux-generic-lpae,                   [*glpae]]
     - [xenial,     armhf,   hwe-16.04,             generic,     linux-generic,                        *arm_hwe_x]
-    - [xenial,     armhf,   hwe-16.04-lowlatency,  lowlatency,  linux-image-lowlatency-lts-xenial,    *arm_hwe_x]
     - [xenial,     i386,    hwe-16.04,             generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     i386,    hwe-16.04-lowlatency,  lowlatency,  linux-image-lowlatency-lts-xenial,    *sa_hwe_x]
+    - [xenial,     i386,    hwe-16.04,             lowlatency,  linux-image-lowlatency-lts-xenial,    *sa_hwe_x]
     - [xenial,     ppc64el, hwe-16.04,             generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     ppc64el, hwe-16.04-lowlatency,  lowlatency,  linux-image-lowlatency-lts-xenial,    *sa_hwe_x]
     - [xenial,     s390x,   hwe-16.04,             generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     s390x,   hwe-16.04-lowlatency,  lowlatency,  linux-image-lowlatency-lts-xenial,    *sa_hwe_x]
  - version: "14.04"
    builtin_kernel: linux-generic
    release: trusty
    kernels:
-    - [trusty,  armhf,   hwe-t,    generic,   linux-generic,            *arm_hwe_t]
-    - [trusty,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
-    - [trusty,  armhf,   keystone, keystone,  linux-keystone,           [keystone]]
-    - [trusty,  i386,    hwe-t,    generic,   linux-generic,            *sa_hwe_t]
-    - [trusty,  amd64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
-    - [trusty,  ppc64el, hwe-t,    generic,   linux-generic,            *sa_hwe_t]
-    - [trusty,  arm64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
-    - [trusty,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
-    - [trusty,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
-    - [utopic,  amd64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
-    - [utopic,  arm64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
-    - [utopic,  armhf,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
-    - [utopic,  i386,    hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
-    - [utopic,  ppc64el, hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
-    - [vivid,   amd64,   hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
-    - [vivid,   arm64,   hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
-    - [vivid,   armhf,   hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
-    - [vivid,   i386,    hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
-    - [vivid,   ppc64el, hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
-    - [wily,    amd64,   hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
-    - [wily,    arm64,   hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
-    - [wily,    armhf,   hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
-    - [wily,    i386,    hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
-    - [wily,    ppc64el, hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
-    - [xenial,  amd64,   hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
-    - [xenial,  arm64,   hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
-    - [xenial,  armhf,   hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
-    - [xenial,  i386,    hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
-    - [xenial,  ppc64el, hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
+    - [trusty,  armhf,   hwe-t,     generic,    linux-generic,                     *arm_hwe_t]
+    - [trusty,  armhf,   *glpae,    *glpae,     linux-generic-lpae,                [*glpae]]
+    - [trusty,  armhf,   keystone,  keystone,   linux-keystone,                    [keystone]]
+    - [trusty,  i386,    hwe-t,     generic,    linux-generic,                     *sa_hwe_t]
+    - [trusty,  amd64,   hwe-t,     generic,    linux-generic,                     *sa_hwe_t]
+    - [trusty,  ppc64el, hwe-t,     generic,    linux-generic,                     *sa_hwe_t]
+    - [trusty,  arm64,   hwe-t,     generic,    linux-generic,                     *sa_hwe_t]
+    - [trusty,  arm64,   *xguboot,  generic,    linux-generic,                     [*xguboot], *kh-xgene]
+    - [trusty,  arm64,   *mustang,  generic,    linux-generic,                     [*mustang], *kh-mustang]
+    - [utopic,  amd64,   hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
+    - [utopic,  arm64,   hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
+    - [utopic,  armhf,   hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
+    - [utopic,  i386,    hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
+    - [utopic,  ppc64el, hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
+    - [vivid,   amd64,   hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
+    - [vivid,   arm64,   hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
+    - [vivid,   armhf,   hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
+    - [vivid,   i386,    hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
+    - [vivid,   ppc64el, hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
+    - [wily,    amd64,   hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
+    - [wily,    arm64,   hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
+    - [wily,    armhf,   hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
+    - [wily,    i386,    hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
+    - [wily,    ppc64el, hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
+    - [xenial,  amd64,   hwe-16.04, generic,    linux-generic-lts-xenial,          *sa_hwe_x]
+    - [xenial,  amd64,   hwe-16.04, lowlatency, linux-image-lowlatency-lts-xenial, *sa_hwe_x]
+    - [xenial,  arm64,   hwe-16.04, generic,    linux-generic-lts-xenial,          *sa_hwe_x]
+    - [xenial,  armhf,   hwe-16.04, generic,    linux-generic-lts-xenial,          *sa_hwe_x]
+    - [xenial,  i386,    hwe-16.04, generic,    linux-generic-lts-xenial,          *sa_hwe_x]
+    - [xenial,  i386,    hwe-16.04, lowlatency, linux-image-lowlatency-lts-xenial, *sa_hwe_x]
+    - [xenial,  ppc64el, hwe-16.04, generic,    linux-generic-lts-xenial,          *sa_hwe_x]
  - version: "12.04"
    release: precise
    builtin_kernel: {armhf: linux-highbank, default: 'linux-generic'}
