Update the product domain to io.maas.images and bump Ubuntu stream version.
maas.ubuntu.com/images is just a redirect to images.maas.io. Update the product
name to reflect the change. Bump the version on the Ubuntu metadata to reflect
the path at which the new data will be hosted at on the V3 stream.

bzr-revno: 327.1.1

--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -164,4 +164,7 @@ releases:
 ##    so for now, we just don't have a stream for that.
 ##  * kernel meta package in all cases here is linux-image-<flavor>
 
+content_id: com.ubuntu.maas:daily:v2:download
+product_id_pre: com.ubuntu.maas.daily:v2:boot
+
 # vi: syntax=yaml nowrap
