Add placeholders for hwe-16.04 and hwe-16.10
bzr-revno: 334.2.1

--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -47,29 +47,45 @@ releases:
    kernels:
     - [yakkety,    amd64,   ga-16.10,    generic,     linux-generic,                        *sa_hwe_y]
     - [yakkety,    amd64,   ga-16.10,    lowlatency,  linux-image-lowlatency,               *sa_hwe_y]
+    - [yakkety,    amd64,   hwe-16.10,   generic,     linux-generic,                        *sa_hwe_y]
+    - [yakkety,    amd64,   hwe-16.10,   lowlatency,  linux-image-lowlatency,               *sa_hwe_y]
     - [yakkety,    arm64,   ga-16.10,    generic,     linux-generic,                        *sa_hwe_y]
+    - [yakkety,    arm64,   hwe-16.10,   generic,     linux-generic,                        *sa_hwe_y]
     - [yakkety,    arm64,   *mustang,    generic,     linux-generic,                        [*mustang], *kh-mustang]
     - [yakkety,    arm64,   *xguboot,    generic,     linux-generic,                        [*xguboot], *kh-xgene]
     - [yakkety,    armhf,   *glpae,      *glpae,      linux-generic-lpae,                   [*glpae]]
     - [yakkety,    armhf,   ga-16.10,    generic,     linux-generic,                        *arm_hwe_y]
+    - [yakkety,    armhf,   hwe-16.10,   generic,     linux-generic,                        *arm_hwe_y]
     - [yakkety,    i386,    ga-16.10,    generic,     linux-generic,                        *sa_hwe_y]
     - [yakkety,    i386,    ga-16.10,    lowlatency,  linux-image-lowlatency,               *sa_hwe_y]
+    - [yakkety,    i386,    hwe-16.10,   generic,     linux-generic,                        *sa_hwe_y]
+    - [yakkety,    i386,    hwe-16.10,   lowlatency,  linux-image-lowlatency,               *sa_hwe_y]
     - [yakkety,    ppc64el, ga-16.10,    generic,     linux-generic,                        *sa_hwe_y]
+    - [yakkety,    ppc64el, hwe-16.10,   generic,     linux-generic,                        *sa_hwe_y]
     - [yakkety,    s390x,   ga-16.10,    generic,     linux-generic,                        *sa_hwe_y]
+    - [yakkety,    s390x,   hwe-16.10,   generic,     linux-generic,                        *sa_hwe_y]
  - version: "16.04"
    release: xenial
    kernels:
     - [xenial,     amd64,   ga-16.04,    generic,     linux-generic,                        *sa_hwe_x]
     - [xenial,     amd64,   ga-16.04,    lowlatency,  linux-image-lowlatency-lts-xenial,    *sa_hwe_x]
+    - [xenial,     amd64,   hwe-16.04,   generic,     linux-generic,                        *sa_hwe_x]
+    - [xenial,     amd64,   hwe-16.04,   lowlatency,  linux-image-lowlatency-lts-xenial,    *sa_hwe_x]
     - [xenial,     arm64,   ga-16.04,    generic,     linux-generic,                        *sa_hwe_x]
     - [xenial,     arm64,   *mustang,    generic,     linux-generic,                        [*mustang], *kh-mustang]
     - [xenial,     arm64,   *xguboot,    generic,     linux-generic,                        [*xguboot], *kh-xgene]
+    - [xenial,     arm64,   hwe-16.04,   generic,     linux-generic,                        *sa_hwe_x]
     - [xenial,     armhf,   *glpae,      *glpae,      linux-generic-lpae,                   [*glpae]]
     - [xenial,     armhf,   ga-16.04,    generic,     linux-generic,                        *arm_hwe_x]
+    - [xenial,     armhf,   hwe-16.04,   generic,     linux-generic,                        *arm_hwe_x]
     - [xenial,     i386,    ga-16.04,    generic,     linux-generic,                        *sa_hwe_x]
     - [xenial,     i386,    ga-16.04,    lowlatency,  linux-image-lowlatency-lts-xenial,    *sa_hwe_x]
+    - [xenial,     i386,    hwe-16.04,   generic,     linux-generic,                        *sa_hwe_x]
+    - [xenial,     i386,    hwe-16.04,   lowlatency,  linux-image-lowlatency-lts-xenial,    *sa_hwe_x]
     - [xenial,     ppc64el, ga-16.04,    generic,     linux-generic,                        *sa_hwe_x]
+    - [xenial,     ppc64el, hwe-16.04,   generic,     linux-generic,                        *sa_hwe_x]
     - [xenial,     s390x,   ga-16.04,    generic,     linux-generic,                        *sa_hwe_x]
+    - [xenial,     s390x,   hwe-16.04,   generic,     linux-generic,                        *sa_hwe_x]
  - version: "14.04"
    builtin_kernel: linux-generic
    release: trusty
