--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -164,6 +164,7 @@ releases:
 ##    so for now, we just don't have a stream for that.
 ##  * kernel meta package in all cases here is linux-image-<flavor>
 
+default_target: http://images.maas.io/ephemeral-v2/daily/streams/v1/com.ubuntu.maas:daily:v2:download.json
 content_id: com.ubuntu.maas:daily:v2:download
 product_id_pre: com.ubuntu.maas.daily:v2:boot
 
