--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -33,6 +33,7 @@ subarches:
  - &arm_hwe_w [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w]
  - &arm_hwe_x [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04]
  - &arm_hwe_y [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10]
+ - &arm_hwe_z [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04]
 
 misc:
  - &glpae generic-lpae
@@ -43,6 +44,20 @@ misc:
  - &kh-xgene   {suffix: .xgene, kihelper: "kh-xgene", di-format: 'xgene'}
 
 releases:
+ - version: "17.04"
+   release: zesty
+   kernels:
+    - [zesty,    amd64,   ga-16.10,    generic,     linux-generic,                        *sa_hwe_y]
+    - [zesty,    amd64,   ga-16.10,    lowlatency,  linux-image-lowlatency,               *sa_hwe_y]
+    - [zesty,    arm64,   ga-16.10,    generic,     linux-generic,                        *sa_hwe_y]
+    - [zesty,    arm64,   *mustang,    generic,     linux-generic,                        [*mustang], *kh-mustang]
+    - [zesty,    arm64,   *xguboot,    generic,     linux-generic,                        [*xguboot], *kh-xgene]
+    - [zesty,    armhf,   *glpae,      *glpae,      linux-generic-lpae,                   [*glpae]]
+    - [zesty,    armhf,   ga-16.10,    generic,     linux-generic,                        *arm_hwe_y]
+    - [zesty,    i386,    ga-16.10,    generic,     linux-generic,                        *sa_hwe_y]
+    - [zesty,    i386,    ga-16.10,    lowlatency,  linux-image-lowlatency,               *sa_hwe_y]
+    - [zesty,    ppc64el, ga-16.10,    generic,     linux-generic,                        *sa_hwe_y]
+    - [zesty,    s390x,   ga-16.10,    generic,     linux-generic,                        *sa_hwe_y]
  - version: "16.10"
    release: yakkety
    kernels:
