Use HWE kernels instead of place holders
bzr-revno: 353.1.1

--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -80,30 +80,30 @@ releases:
    kernels:
     - [xenial,     amd64,    ga-16.04,        generic,     linux-generic,                        *sa_hwe_x]
     - [xenial,     amd64,    ga-16.04,        lowlatency,  linux-lowlatency,                     *sa_hwe_x]
-    - [xenial,     amd64,    hwe-16.04,       generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     amd64,    hwe-16.04,       lowlatency,  linux-lowlatency,                     *sa_hwe_x]
+    - [xenial,     amd64,    hwe-16.04,       generic,     linux-generic-hwe.16.04,              *sa_hwe_x]
+    - [xenial,     amd64,    hwe-16.04,       lowlatency,  linux-lowlatency-hwe-16.04,           *sa_hwe_x]
     - [xenial,     amd64,    hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
     - [xenial,     amd64,    hwe-16.04-edge,  lowlatency,  linux-lowlatency-hwe-16.04-edge,      *sa_hwe_x_edge]
     - [xenial,     arm64,    ga-16.04,        generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     arm64,    hwe-16.04,       generic,     linux-generic,                        *sa_hwe_x]
+    - [xenial,     arm64,    hwe-16.04,       generic,     linux-generic-hwe-16.04,              *sa_hwe_x]
     - [xenial,     arm64,    hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
     - [xenial,     arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
     - [xenial,     arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
     - [xenial,     armhf,    *glpae,          *glpae,      linux-generic-lpae,                   [*glpae]]
     - [xenial,     armhf,    ga-16.04,        generic,     linux-generic,                        *arm_hwe_x]
-    - [xenial,     armhf,    hwe-16.04,       generic,     linux-generic,                        *arm_hwe_x]
+    - [xenial,     armhf,    hwe-16.04,       generic,     linux-generic-hwe-16.04,              *arm_hwe_x]
     - [xenial,     armhf,    hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *arm_hwe_x_edge]
     - [xenial,     i386,     ga-16.04,        generic,     linux-generic,                        *sa_hwe_x]
     - [xenial,     i386,     ga-16.04,        lowlatency,  linux-lowlatency,                     *sa_hwe_x]
-    - [xenial,     i386,     hwe-16.04,       generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     i386,     hwe-16.04,       lowlatency,  linux-lowlatency,                     *sa_hwe_x]
+    - [xenial,     i386,     hwe-16.04,       generic,     linux-generic-hwe-16.04,              *sa_hwe_x]
+    - [xenial,     i386,     hwe-16.04,       lowlatency,  linux-lowlatency-hwe-16.04,           *sa_hwe_x]
     - [xenial,     i386,     hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
     - [xenial,     i386,     hwe-16.04-edge,  lowlatency,  linux-lowlatency-hwe-16.04-edge,      *sa_hwe_x_edge]
     - [xenial,     ppc64el,  ga-16.04,        generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     ppc64el,  hwe-16.04,       generic,     linux-generic,                        *sa_hwe_x]
+    - [xenial,     ppc64el,  hwe-16.04,       generic,     linux-generic-hwe-16.04,              *sa_hwe_x]
     - [xenial,     ppc64el,  hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
     - [xenial,     s390x,    ga-16.04,        generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     s390x,    hwe-16.04,       generic,     linux-generic,                        *sa_hwe_x]
+    - [xenial,     s390x,    hwe-16.04,       generic,     linux-generic-hwe-16.04,              *sa_hwe_x]
     - [xenial,     s390x,    hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
  - version: "14.04"
    builtin_kernel: linux-generic
