--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -29,6 +29,7 @@ subarches:
  - &sa_hwe_x_legacy [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x]
  - &sa_hwe_y        [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10]
  - &sa_hwe_z        [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04]
+ - &sa_hwe_a        [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10]
  - &arm_hwe_t       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t]
  - &arm_hwe_u       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u]
  - &arm_hwe_v       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
@@ -37,6 +38,7 @@ subarches:
  - &arm_hwe_x_edge  [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, hwe-16.04, hwe-16.10]
  - &arm_hwe_y       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10]
  - &arm_hwe_z       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04]
+ - &arm_hwe_a       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10]
 
 misc:
  - &glpae generic-lpae
@@ -47,6 +49,20 @@ misc:
  - &kh-xgene   {suffix: .xgene, kihelper: "kh-xgene", di-format: 'xgene'}
 
 releases:
+ - version: "17.10"
+   release: artful
+   kernels:
+    - [artful,     amd64,    ga-17.10,        generic,     linux-generic,                        *sa_hwe_a]
+    - [artful,     amd64,    ga-17.10,        lowlatency,  linux-image-lowlatency,               *sa_hwe_a]
+    - [artful,     arm64,    ga-17.10,        generic,     linux-generic,                        *sa_hwe_a]
+    - [artful,     arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
+    - [artful,     arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
+    - [artful,     armhf,    *glpae,          *glpae,      linux-generic-lpae,                   [*glpae]]
+    - [artful,     armhf,    ga-17.10,        generic,     linux-generic,                        *arm_hwe_a]
+    - [artful,     i386,     ga-17.10,        generic,     linux-generic,                        *sa_hwe_a]
+    - [artful,     i386,     ga-17.10,        lowlatency,  linux-image-lowlatency,               *sa_hwe_a]
+    - [artful,     ppc64el,  ga-17.10,        generic,     linux-generic,                        *sa_hwe_a]
+    - [artful,     s390x,    ga-17.10,        generic,     linux-generic,                        *sa_hwe_a]
  - version: "17.04"
    release: zesty
    kernels:
